--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div class="header">
-    <h2>順豐查詢 </h2>
+    <h2>順豐站查詢 </h2>
     <input type="text" id="kw" placeholder="輸入地區關鍵字 (如: 慈雲山)..." oninput="search()">
     <div id="statusMsg" class="status-bar">正在檢查資料庫...</div>
 </div>
@@ -105,4 +105,5 @@
 </script>
 
 </body>
+
 </html>
